Update Instruqt track scripts Update local run for Podman